--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "classnames": "^2.5.1",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
+    "lottie": "^0.0.1",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -21,7 +23,8 @@
     "react-router-dom": "^6.23.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.8",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "web": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
